--- a/src/components/Products/products.scss
+++ b/src/components/Products/products.scss
@@ -1,7 +1,10 @@
+@import "../../Colors.scss";
+
 .products-container{
+    
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
     gap:15px;
-    padding-top: 40px;
+    padding-top: px;
 }
