--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -6,7 +6,7 @@
     position: relative;
     width: 100%;
     height: auto;
-    background-color: #f0f0f0;
+    background-color: $primary-color;
     overflow: hidden;
   }
   
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    border-radius: 10%;
+    
   }
   
   .buttons {
