--- a/src/Colors.scss
+++ b/src/Colors.scss
@@ -1,4 +1,4 @@
 $primary-color: #000000;
 $secondary-color: #ffffff;
-$terciary-color:rgb(248, 255, 31);
-$hover-color: rgb(250, 245, 149)
+$terciary-color:white;
+$hover-color: rgb(166, 164, 164)
