--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,13 +1,39 @@
 @import "../../Colors.scss";
 
 .header {
-   
-    padding: 1.5em;    
+    padding: 1.5em;
     color: $terciary-color;
     background-color: $primary-color;
     display: flex;
-    justify-content:space-between;
-    flex-wrap: wrap;
+    justify-content: space-between; 
+    align-items: center; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 -1.5em;
+    padding-right: 5rem;
     
-}
+  }
+  .logo {
+    padding-left: 4vh;
+    display: flex;
+    gap: 2vh;
+  }
+  
+  .login {
+    display: flex;
+    align-items: center;
+    padding: 3vh;
     
+  }
+  .login > *:not(:last-child) {
+    margin-right: 1rem; 
+  }
+
+  
+  
+
+
+
+  .logo img{
+    height: 70px;
+    width: auto;
+  }
