--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,6 +1,6 @@
-@import "../../Colors.scss";  
+@import "../../Colors.scss";
 
-.register-container {
+.login-container {
 
     display: flex;
     justify-content: center;
@@ -9,12 +9,16 @@
     background: linear-gradient(to bottom, #000000, #ffffff); 
   }
   
-  .register-form {
+  .login-form {
     background-color: rgba(255, 255, 255, 0.8); 
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     max-width: 600px;
+  }
+  .login-form:hover{
+    color: $hover-color;
+
   }
 
   .button{
@@ -30,12 +34,3 @@
     background-color: $hover-color;
     
   }
-  
-  
-  
-  
-  
-  
-  
-
-  
