--- a/src/components/Products/products.scss
+++ b/src/components/Products/products.scss
@@ -6,5 +6,6 @@
     flex-wrap: wrap;
     justify-content: center;
     gap:15px;
-    padding-top: px;
+    padding-top: 15px;
+    background: linear-gradient(to bottom, #000000, #ffffff); 
 }
