--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,9 +7,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 10px $primary-color;
   margin: 0 -1.5em;
   padding-right: 5rem;
+  
 
   .logo {
     padding-left: 4vh;
@@ -30,6 +31,10 @@
   .logo img {
     height: 75px;
     width: auto;
+  }
+
+  .logo h2 {
+    text-shadow: 1px 1px 10px ;
   }
 
   @media screen and (max-width: 768px) {
